# tag-agent

./: .gitignore  .no-mistakes.yaml  .npmignore  COMPARISON_REPORT.md  LICENSE  MANIFEST.in  README.md  TODO.md  cli-config.yaml.example  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  go-release.yml  release.yml
docs/: BUGBASH_AUDIT_PHASE3.md  BUGBASH_AUDIT_PHASE4.md  FEATURES.md  FEATURES_ROADMAP.md  GO_MIGRATION_PLAN.md  GO_MIGRATION_RESEARCH.md  NATIVE_HARNESS_STRATEGY.md  REFACTOR_CHECKLIST.md  REFACTOR_PLAN.md  REVIEW_PROMPT.md  STACK_DECISION.md  STUBS.md  TODO.md  TUI_AUDIT_PHASE1.md  TUI_AUDIT_PHASE2.md  e2e-report.md
docs/adr/: 0001-postgres-and-honcho-deferral.md
docs/blog/: LINKEDIN_POST.md  TAG_STORY.md
docs/prd/: INDEX.md  PRD-001-structured-memory-configuration.md  PRD-002-cross-session-memory-journal.md  PRD-003-rich-streaming-tui.md  PRD-004-kanban-swarm-helpers.md  PRD-005-execution-backend-selection.md  PRD-006-tool-gateway-opt-in.md  PRD-007-tag-desktop.md  PRD-008-background-task-queue.md  PRD-009-enhanced-doctor-diagnostics.md  PRD-010-dashboard-admin-panel.md  PRD-011-plugin-management.md  PRD-012-cost-tracking-budget.md  PRD-013-agent-tracing-observability.md  PRD-014-mcp-server-registry.md  PRD-015-profile-templates-sharing.md  PRD-016-webhook-event-triggers.md  PRD-017-multi-model-benchmarking.md  PRD-018-context-window-management.md  PRD-019-natural-language-shell.md  PRD-020-cicd-integration.md  PRD-021-agent-loop-autonomous-mode.md  PRD-022-cron-scheduled-agents.md  PRD-023-multi-agent-swarm-context-routing.md  PRD-024-repo-map-workspace-context.md  PRD-025-semantic-memory-confidence-decay.md  PRD-026-profile-marketplace.md  PRD-027-eval-framework.md  PRD-028-sandbox-code-execution.md  PRD-029-streaming-tui-dashboard.md  PRD-030-prompt-cache-analytics.md  PRD-031-model-fallback-chains.md  PRD-032-agent-replay-time-travel-debugging.md  PRD-033-dependency-aware-task-queue.md  PRD-034-secret-scanning.md  PRD-035-ide-bridge-lsp.md  PRD-036-web-dashboard.md  PRD-037-agent-personas.md  PRD-038-diff-aware-context-injection.md  PRD-039-token-budget-enforcement.md  (+89 more)
e2e-report/: 00-inventory.md  _capture.sh
src/tag/: __init__.py  alerts.py  annotation_queue.py  api.py  budget.py  ci.py  cli.py  context.py  controller.py  cost_table.py  cron_scheduler.py  dag.py  devui.py  diff_context.py  entity_graph.py  eval_ci.py  eval_datasets.py  eval_framework.py  eval_judge.py  issue_solver.py  kanban.py  loop_agent.py  lsp_server.py  memory_extractor.py  memory_gc.py  notifications.py  otel_semconv.py  persona.py  prompt_hub.py  queue_worker.py  sandbox.py  security.py  semantic_memory.py  shell_mode.py  split_agent.py  swarm.py  swarm_agent_entry.py  swe_harness.py  tool_retrieval.py  tracing.py  (+3 more)
tag-go/: .dockerignore  .gitignore  Dockerfile  MIGRATION_STATUS.md  go.mod  go.sum
tag-go/deploy/: README.md  entrypoint.sh  render.yaml
tests/: conftest.py  test_clusters_abc.py  test_controller.py  test_cross_cutting.py  test_prd_021_032.py  test_prd_033_044.py  test_prd_features.py  test_py_audit_fixes.py
tests/hermes_cli/: conftest.py  (+1 more)
(+202 files in other folders)
