[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tag-agent"
version = "0.1.0"
description = "TAG: a Hermes-based orchestration layer with patched TUI, profile routing, and OpenRouter/Codex workflows."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "TAG" }
]
keywords = ["agents", "cli", "codex", "hermes", "openrouter", "orchestration", "tui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Terminals",
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/sanskarpan/tag-agent"
Repository = "https://github.com/sanskarpan/tag-agent.git"
Issues = "https://github.com/sanskarpan/tag-agent/issues"

[project.scripts]
tag = "tag.controller:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tag = [
  "assets/skins/*.yaml",
  "config/*.yaml",
  "docs/*.md",
  "patches/*.patch",
  "vendor/*.tar.gz",
]
